Additional correction on Wandershare img alignment

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
     }
     .img-col-right {
         padding: 2rem;
-        margin: 2rem 2rem 0rem 0rem;
+        margin: 0rem 2rem 2rem 0rem;
     }
 }
 
